2000-07-12  Bryce McKinlay  <bryce@albatross.co.nz>

	AWT Stuff:
	* java/util/ResourceBundle.java (getLocale): stub.
	* Makefile.am: Added new AWT classes.
	* Makefile.in: Rebuilt.
	* java/awt/AWTEvent.java: Add EVENT_MASK constants, isConsumed, 
	constructors. Fix toString() and paramString().
	* java/awt/AWTEventMulticaster.java: New class. Implemented.
	* java/awt/CheckboxGroup.java: New class.
	* java/awt/ColorModel.java: New class.
	* java/awt/Component.java: Added stubs for most methods. Implemented 
	event dispatch.
	* java/awt/Container.java: ditto.
	* java/awt/ComponentOrientation.java: New class. Partly implemented.
	* java/awt/Cursor.java: ditto.
	* java/awt/Event.java: Fix paramString().
	* java/awt/EventQueue.java: New class. Implemented.
	* java/awt/Font.java: Added additional stub methods. Implemented 
	toString().
	* java/awt/FontMetrics.java: New class. Stubbed.
	* java/awt/GraphicsConfiguration.java: New class. Complete, except for 
	Java2D parts.
	* java/awt/Insets.java: New class. Implemented.
	* java/awt/Menu.java: Add new methods. Partially implemented.
	* java/awt/MenuItem.java: Add new methods and fields. Partially 
	implemented.
	* java/awt/MenuShortcut.java: New class. Implemented.
	* java/awt/Panel.java: New class. Placeholder.
	* java/awt/PopupMenu.java: New class. Stubbed.
	* java/awt/Rectangle.java: New class. Implemented.
	* java/awt/Toolkit.java: Added getSystemEventQueue() stub.
	* java/awt/event/ActionEvent.java: Implement paramString().
	* java/awt/event/AdjustmentEvent.java: Implement paramString().
	* java/awt/event/ComponentEvent.java: Implement paramString().
	* java/awt/event/ContainerEvent.java: Implement paramString().
	* java/awt/event/FocusEvent.java: Implement paramString().
	* java/awt/event/HierarchyBoundsAdapter.java: New class.
	* java/awt/event/HierarchyBoundsListener.java: New class.
	* java/awt/event/HierarchyEvent.java: New class.
	* java/awt/event/HierarchyListener.java: New class.